# OthelloCpp

./: CMakeLists.txt  main.cpp
OthelloCpp/: CMakeLists.txt  OthelloBoard.cpp  OthelloBoard.h  OthelloCpp.cpp
graphics/: CMakeLists.txt  GameManager.cpp  GameManager.h  GameView.cpp  GameView.h  Player.h  main.cpp
graphics/shaders/: Blur.frag  GaussianBlur.frag
othello/: CMakeLists.txt  OthelloBoard.cpp  OthelloBoard.h  OthelloCpp.cpp  OthelloCpp.h
players/: CMakeLists.txt  MinimaxPlayer.cpp  MinimaxPlayer.h  PlayerInterface.h  RandomPlayer.cpp  RandomPlayer.h
tests/: CMakeLists.txt  OthelloBoardTest.cpp  OthelloGetActionsTest.cpp
